--- a/Docusaurus/sf-documentation/src/pages/index.module.css
+++ b/Docusaurus/sf-documentation/src/pages/index.module.css
@@ -45,7 +45,12 @@
     left: -2px;
     border-radius: 0px 5px 5px 0px; 
 }
+@media screen and (max-width: 996px) and (min-width: 768px) {
+  .banner_container h1{ 
+    margin-bottom: 20px;
+  } 
 
+}
 @media screen and (max-width: 767px) and (min-width: 320px) {
   
   .banner_container{
@@ -53,7 +58,7 @@
   }
  .banner_container h1{
     margin-left: 16px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
   
   .search{
